# Music

app/: build.gradle
app/src/androidTest/java/com/cxj/mymusic/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/cxj/mymusic/: CutActivity.java  MainActivity.java
app/src/main/res/layout/: activity_cutaudio.xml  activity_main.xml
app/src/test/java/com/cxj/mymusic/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
myplayer/: CMakeLists.txt  build.gradle
myplayer/src/androidTest/java/cxj/com/myplayer/: ExampleInstrumentedTest.java
myplayer/src/main/: AndroidManifest.xml
myplayer/src/main/cpp/: AndroidLog.h  CjAudio.cpp  CjAudio.h  CjBufferQueue.cpp  CjBufferQueue.h  CjCallJava.cpp  CjCallJava.h  CjFFmpeg.cpp  CjFFmpeg.h  CjPcmBean.cpp  CjPcmBean.h  CjPlaystatus.cpp  CjPlaystatus.h  CjQueue.cpp  CjQueue.h  CjVideo.cpp  CjVideo.h  native-lib.cpp
myplayer/src/main/java/cxj/com/myplayer/: CjTimeInfoBean.java  Demo.java
myplayer/src/main/java/cxj/com/myplayer/listener/: CjOnCompleteListener.java  CjOnErrorListener.java  CjOnLoadListener.java  CjOnParparedListener.java  CjOnPauseResumeListener.java  CjOnPcmInfoListener.java  CjOnRecordTimeListener.java  CjOnTimeInfoListener.java  CjOnValumeDBListener.java
myplayer/src/main/java/cxj/com/myplayer/log/: MyLog.java
myplayer/src/main/java/cxj/com/myplayer/muteenum/: MuteEnum.java
myplayer/src/main/java/cxj/com/myplayer/opengl/: CjGLSurfaceView.java  CjRender.java  CjShaderUtil.java
myplayer/src/main/java/cxj/com/myplayer/player/: CjPlayer.java
myplayer/src/main/java/cxj/com/myplayer/util/: CjTimeUtil.java  CjVideoSupportUtil.java
myplayer/src/test/java/cxj/com/myplayer/: ExampleUnitTest.java
